Added AssetController POST endpoint that creates a new Asset from JSON POST data.